--- a/BoulderDash.GUIApp/BoulderDash.GUIApp.csproj
+++ b/BoulderDash.GUIApp/BoulderDash.GUIApp.csproj
@@ -1,10 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net9.0-windows</TargetFramework>
+    <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
   <ItemGroup>
-	  <ProjectReference Include="..\BoulderDash\BoulderDash.Core.csproj" />
+    <ProjectReference Include="..\BoulderDash\BoulderDash.Core.csproj" />
   </ItemGroup>
+
 </Project>
